[project]
name = "requests-sap"
version = "0.0.6"
authors = [
  { name="Ondra Machacek", email="machacek.ondra@gmail.com" },
]
description = "Plugin for SAP launchapd in for python requests"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/machacekondra/requests-sap"
"Bug Tracker" = "https://github.com/machacekondra/requests-sap/issues"
